2.4: *Added settings menu, user can be pick between auto and manual shooting. default to auto.
     *fixed shooting bug.
     *Created Menus class in Other folder for different menus.
----------------------------------------------------------------------------------------------------------------------
2.5: * fixed white background showing with sprites by using a different color on bg then use white, and save as png.
     * Added green jet enemy. More health and damage but gives 3 points if killed.
     * Split game code into two main loops: wave 1 and wave 2.
     * Created three different buff actors: health buff(+10), damage buff(+50), bullet per second buff(-50ms to timer).
     * every 20 points in wave 1, every 40 in wave 2: 50%: spawn health buff, 25%: spawn damage buff, 25%: bullet/s buff.
     * changed window size to 1920 * 1080, and made it fullscreen by default.
     * added display options in settings menu: fullscreen, hardware accelerated fullscreen, and window that's scalable.
     * added settings button to try again menu.
     * rescaled the menus, actor sprites, level text position (took longer than it sounds okay...).
     * fixed escape press bug that will jump the game to next wave (since it would end the first loop but not second).
     * added different ways to move: arrows(default), wads keys, and mouse.
     * added different ways to shoot: auto(default), space, and mouse.
     * added user selection on menu.
-----------------------------------------------------------------------------------------------------------------------
2.6: * slow day today... got a HUD working that can be used across levels
     * Got the first level working with the new HUD, took forever
     * First three levels working.
-----------------------------------------------------------------------------------------------------------------------
2.62:
     * got enemy shooting mechanics
     * got 4 levels now.
