@@ -1,6 +1,7 @@
 ----------------------------------------------------
                 Current track
 ----------------------------------------------------
+try to get screen to auto resize
 implement a more object oriented way to make levels
 level picker at menu, fix hud to take max waves at beginning
 player level and xp system
